# magican-solana-token

./: .gitignore  .mocharc.json  Anchor.toml  CLAUDE.md  LICENSE  PROGRESS.md  README.md  package.json
programs/magican-token/: Cargo.toml
programs/magican-token/src/: errors.rs  events.rs  lib.rs
tests/: init-mint.ts  magican-token.ts
